# tp_c_c-plus-plus_homework

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  development_task.c  development_task.h  main.c  matrix.c  matrix.h  parallel_column_sum.c  parallel_column_sum.h  run_cppcheck.sh  sequential_column_sum.c  sequential_column_sum.h  tests.cpp  tests_development_task.cpp
tests/: test.txt
